--- a/frontend/components/Section/Section.module.scss
+++ b/frontend/components/Section/Section.module.scss
@@ -12,9 +12,15 @@
     flex-direction: column;
 }
 
+.wrapper {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
 @media only screen and (min-width: $bp-md) {
-    .root {
+    .wrapper {
         flex-direction: row;
-        height: 100vh;
     }
 }
